--- a/singolo1.css
+++ b/singolo1.css
@@ -1,5 +1,5 @@
 body {
-  width: 1020px;
+  /* width: 1020px; */
   max-width: 1020px;
 }
 
@@ -17,9 +17,19 @@ body {
   margin: 33px 0px 0px 40px;
 }
 
-.logo img {
+.logo .logoSpan {
   display: inline-block;
-  width: auto;
+  margin: 10px -119px 0px -2px;
+  font-size: 24px;
+  line-height: 6px;
+  color: #f2f2f2;
+  font-family: "Lato";
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.logo span .red {
+  color: #f06c64;
 }
 
 .navigation {
@@ -32,17 +42,19 @@ body {
   margin: 0px 40px 0px 0px;
 }
 
-.navigation span {
+.navigation a {
   display: inline-block;
   margin: 10px -1px 0px -2px;
   font-size: 12px;
   line-height: 6px;
+  font-weight: bold;
   color: #f2f2f2;
   font-family: "Lato";
   text-transform: uppercase;
+  text-decoration: none;
 }
 
-.navigation span:hover {
+.navigation a:hover {
   color: #f06c64;
 }
 
@@ -50,6 +62,34 @@ body {
   height: 595px;
   background: #f06c64;
   border-bottom: solid 5px #ea676b;
+  position: relative;
+}
+
+.arrowLeft {
+  display: inline-block;
+  position: absolute;
+  margin-top: 280px;
+  left: 4%;
+}
+
+.iPhoneVertical {
+  display: inline-block;
+  position: absolute;
+  left: 110px;
+  top: -17px;
+}
+
+.iPhoneGorizontal {
+  display: inline-block;
+  position: absolute;
+  right: 80px;
+  top: 69px;
+}
+
+.arrowRight {
+  position: absolute;
+  margin-top: 280px;
+  right: 4%;
 }
 
 .footer {
