--- a/singolo1.css
+++ b/singolo1.css
@@ -105,13 +105,13 @@ h1 {
   cursor: pointer;
 }
 
-.footer {
+.services {
   height: 492px;
   background: #f2f2f2;
   border-bottom: solid 5px #ffffff;
 }
 
-.footer .h2 {
+.services .h2 {
   font-size: 30px;
   line-height: 18px;
   color: #666d89;
@@ -122,7 +122,7 @@ h1 {
   padding-top: 7%;
 }
 
-.footer .servicesDescription {
+.services .servicesDescription {
   margin-top: 26px;
   width: 940px;
   height: 57px;
@@ -160,14 +160,21 @@ h1 {
   margin-left: -1%;
   background-image: url(./assets/img/Ellipse.svg);
   background-size: contain;
+  background-repeat: no-repeat;
   width: 21%;
   height: 61%;
-  background-repeat: no-repeat;
   border-radius: 29px;
 }
 
 .ellipseBack:hover {
-  background-color: #eb5055;
+  background: rgba(240,108,100,0.21);
+  background: -moz-radial-gradient(center, ellipse cover, rgba(240,108,100,0.21) 0%, rgba(246,41,12,0.21) 0%, rgba(232,219,218,0.59) 48%, rgba(245,238,237,1) 100%);
+  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(240,108,100,0.21)), color-stop(0%, rgba(246,41,12,0.21)), color-stop(48%, rgba(232,219,218,0.59)), color-stop(100%, rgba(245,238,237,1)));
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(240,108,100,0.21) 0%, rgba(246,41,12,0.21) 0%, rgba(232,219,218,0.59) 48%, rgba(245,238,237,1) 100%);
+  background: -o-radial-gradient(center, ellipse cover, rgba(240,108,100,0.21) 0%, rgba(246,41,12,0.21) 0%, rgba(232,219,218,0.59) 48%, rgba(245,238,237,1) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(240,108,100,0.21) 0%, rgba(246,41,12,0.21) 0%, rgba(232,219,218,0.59) 48%, rgba(245,238,237,1) 100%);
+  background: radial-gradient(ellipse at center, rgba(240,108,100,0.21) 0%, rgba(246,41,12,0.21) 0%, rgba(232,219,218,0.59) 48%, rgba(245,238,237,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f06c64', endColorstr='#f5eeed', GradientType=1 );
 }
 
 .card img {
