--- a/singolo1.css
+++ b/singolo1.css
@@ -1,4 +1,3 @@
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -12,38 +11,42 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+  display: block;
 }
+
 body {
-	line-height: 1;
+  line-height: 1;
 }
+
 ol, ul {
-	list-style: none;
+  list-style: none;
 }
+
 blockquote, q {
-	quotes: none;
+  quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+  content: '';
+  content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-
-
 
 body {
   /* width: 1020px; */
@@ -80,7 +83,7 @@ h1 {
   text-transform: uppercase;
 }
 
-.logo span .red {
+.red {
   color: #f06c64;
 }
 
@@ -178,8 +181,9 @@ h1 {
   color: #767e9e;
   font-family: "Lato";
   font-weight: 300;
-  text-align: justify;
+  text-align: left;
   padding-left: 4%;
+	letter-spacing: -.0025em;
 }
 
 .cards {
@@ -189,11 +193,9 @@ h1 {
   justify-content: space-between;
   align-content: space-between;
   height: 48%;
-  padding-left:  3.3%;
+  padding-left: 3.3%;
   padding-top: 3%;
   padding-right: 3%;
-
-  /* margin-left: 0.1%; */
 }
 
 .card {
@@ -245,4 +247,5 @@ h1 {
   font-family: "Lato";
   font-weight: 400;
   text-align: justify;
+  letter-spacing: -.003em;
 }
