fix: navigation(dots)

--- a/singolo1.css
+++ b/singolo1.css
@@ -87,28 +87,53 @@ h1 {
   color: #f06c64;
 }
 
-.navigation {
+nav {
+  width: 372px;
+  margin-right: 40px;
+  margin-top: 3px;
+  letter-spacing: -.02em;
+}
+
+nav ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: stretch;
-  height: 100%;
-  width: 370px;
-  margin: 0px 40px 0px 0px;
+  margin-top: 37px;
 }
 
-.navigation a {
-  display: inline-block;
-  margin: 12% -1px 0px -2px;
-  font-size: 12px;
-  line-height: 100%;
-  font-weight: bold;
+.navigation ul li:before {
+	color: #323746;
+	content:"\2022";
+	font-size: 8px;
+	padding-right: 15px;
+	line-height: 18px;
+  top: 0;
+}
+
+.navigation ul li:first-child:before {
+	content: "";
+	padding-right: 0;
+}
+
+.navigation ul li a {
+  text-decoration: none;
+  font-size: 12.3px;
+  line-height: 6px;
   color: #f2f2f2;
   font-family: "Lato";
-  text-transform: uppercase;
-  text-decoration: none;
+  font-weight: 700;
+  text-align: left;
 }
 
+.navigation ul li a:hover {
+  text-decoration: none;
+  font-size: 12px;
+  line-height: 6px;
+  color: #f06c64;
+  font-family: "Lato";
+  font-weight: 700;
+  text-align: left;
+}
 .navigation a:hover {
   color: #f06c64;
 }
