--- a/singolo2.css
+++ b/singolo2.css
@@ -89,11 +89,11 @@ body {
 .wrapper-2 .portfolio-buttons {
   display: flex;
   margin-left: 31px;
-  margin-top:2px;
+  margin-top: 2px;
 }
 
 .wrapper-2 .portfolio-button {
-  height:20px;
+  height: 20px;
   padding: 0px 5px 1px 6px;
   border-radius: 5px;
   border: 1px solid #666d89;
@@ -118,7 +118,12 @@ body {
   height: 185px;
   background: red;
   margin: 10px;
-  margin-bottom:12px;
+  margin-bottom: 12px;
+}
+
+/* Показываем только 12 элементов */
+.wrapper-2 .portfolio-img>div:nth-child(n+13) {
+  display: none;
 }
 
 .wrapper-2 .about-us {
@@ -126,6 +131,88 @@ body {
   background-color: #f2f2f2;
   border-bottom: solid 6px #ffffff;
 }
+
+.wrapper-2 .about-us>h2 {
+  font-size: 30px;
+  line-height: 18px;
+  color: #666d89;
+  font-family: "Lato";
+  font-weight: 900;
+  text-align: left;
+  margin: 0px 0px 0px 40px;
+  padding-top: 72px;
+  letter-spacing: 0px;
+}
+
+.wrapper-2 .about-description {
+  height: 57px;
+  font-size: 18px;
+  line-height: 30px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 300;
+  text-align: left;
+  margin-left: 40px;
+  margin-right: 40px;
+  padding-top: 26px;
+  letter-spacing: -.003em;
+}
+
+.wrapper-2 .about-description .crutch {
+  letter-spacing: -.013em;
+}
+
+.wrapper-2 .about-us .cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 45px 40px 0px 40px
+}
+
+.wrapper-2 .about-us .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: solid 0px black;
+  width: 300px;
+  /* margin-left:auto;
+  margin-right:auto; */
+  /* margin-right : 14px; */
+}
+
+.wrapper-2 .about-us .card>img {
+  width: 100%;
+}
+
+.wrapper-2 .about-us .card>h2 {
+  font-size: 18px;
+  line-height: 18px;
+  color: #666d89;
+  font-family: "Lato";
+  font-weight: 900;
+  text-align: left;
+  margin-top: 20px;
+  letter-spacing: -.003em;
+}
+
+.wrapper-2 .about-us .card>p {
+  width: 301px;
+  font-size: 12px;
+  line-height: 22px;
+  color: #767e9e;
+  font-family: "Lato";
+  font-weight: 400;
+  text-align: left;
+  margin-left: 0;
+  padding-top: 7px;
+  letter-spacing: 0px;
+}
+
+.wrapper-2 .about-us .card .icon {
+  margin-top:20px;
+  margin-right: 1px;
+}
+
 
 @font-face {
   font-family: "Lato";
