fix:comment, hover styles

--- a/singolo3.css
+++ b/singolo3.css
@@ -165,8 +165,12 @@ body {
   padding-left: 15px;
   padding-top: 7px;
   margin-bottom: 16px;
+  resize: none; 
 }
 
+.wrapper-3 .form--and--info .comment::placeholder { 
+  color: #f0d8d9;
+}
 .wrapper-3 .form--and--info .submit {
   visibility: hidden;
   width: 619px;
@@ -274,7 +278,7 @@ body {
   align-items: center;
 }
 
-.wrapper-3 .copyright {
+.wrapper-3 .footer .copyright {
   text-decoration: none;
   font-size: 12px;
   line-height: 22px;
@@ -283,4 +287,8 @@ body {
   font-weight: 400;
   text-align: left;
   letter-spacing: -0.01em;
+}
+
+.wrapper-3 .footer .icons > img:hover {
+cursor:pointer;
 }
