--- a/singolo3.css
+++ b/singolo3.css
@@ -289,6 +289,10 @@ body {
   letter-spacing: -0.01em;
 }
 
+.wrapper-3 .footer .icons img{
+margin-top:7px;
+}
+
 .wrapper-3 .footer .icons > img:hover {
 cursor:pointer;
 }
